# franka_o80

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
example/: backend.cpp  backend.py  backend_graph.py  control.cpp  control.py  get.cpp  selftest.cpp  set.cpp  set_angle_0.cpp
include/franka_o80/: actuator.hpp  cartesial_states.hpp  constants.hpp  driver.hpp  driver_in.hpp  driver_input.hpp  driver_input_output.hpp  driver_out.hpp  driver_output.hpp  error.hpp  errors.hpp  franka_test.hpp  front_end.hpp  indexes.hpp  kinematics.hpp  limits.hpp  mode.hpp  segment_id.hpp  standalone.hpp  state.hpp  states.hpp
model/: franka.urdf
src/: cartesial_states.cpp  driver.cpp  driver_in.cpp  driver_input.cpp  driver_input_output.cpp  driver_out.cpp  driver_output.cpp  franka_test.cpp  kinematics.cpp  segment_id.cpp  standalone.cpp  state.cpp  states.cpp  wrappers.cpp
src/wrappers/: wrappers.cpp
srcpy/: wrappers.cpp
